hphp/test/zend/good/ext-json/bug41034.php
<?php
echo json_encode(array(0,"\0ab"=>1,"\0null-prefixed value"));
echo "\nDone\n";
?>